# AI_Advertising_Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TalkFile_AX 과제 사전 준비 산출물.docx  package-lock.json  package.json  server.js
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/alembic/: env.py  script.py.mako
apps/api/app/alembic/versions/: ea3cbfce14c6_initial_schema.py
apps/api/app/application/: feature_builder.py  pipeline.py  proposal_service.py  recommendation_service.py  scoring_service.py
apps/api/app/application/agents/: category_agent.py  common.py  competitor_agent.py  discovery_agent.py  market_agent.py  performance_agent.py  renewal_agent.py  roi_agent.py
apps/api/app/core/: config.py  database.py  masking.py  security.py
apps/api/app/domain/: enums.py  roi.py
apps/api/app/domain/recommendation/: engine.py  models.py
apps/api/app/domain/scoring/: engine.py  models.py
apps/api/app/infrastructure/db/: base.py
apps/api/app/infrastructure/llm/: base.py  gateway.py  providers.py
apps/api/app/interface/: deps.py  query.py
apps/api/app/interface/routers/: ad_products.py  advertisers.py  analysis.py  auth.py  categories.py  (+6 more)
apps/api/app/seed/: data.py  seed.py
apps/api/tests/: conftest.py  test_feature_builder.py  test_llm_and_masking.py  test_phase3_api.py  test_phase3b_api.py  test_phase3c_proposal_api.py  test_phase4_agents.py  test_phase5_backend.py  test_phase6_coverage.py  test_phase_operations.py  test_recommendation_engine.py  test_scoring_engine.py
(+65 files in other folders)
